# Ivo

./: .appveyor.yml  .travis.sh  .travis.yml  CMakeLists.txt  Ivo.pro  LICENSE  formats3d.cpp  main.cpp  res.qrc  styles.qrc
geometric/: aabbox.cpp  aabbox.h  binPacking.cpp  binPacking.h  compgeom.cpp  compgeom.h  minOBBox.cpp  obbox.cpp  obbox.h
interface/: actionupdater.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowUpdaters.cpp  materialmanager.cpp  materialmanager.h  materialmanager.ui  renwin.cpp  renwin.h  renwin2d.cpp  renwin2d.h  renwin2dEditInfo.h  renwin3d.cpp  renwin3d.h  scalewindow.cpp  scalewindow.h  scalewindow.ui  selectioninfo.h  settingswindow.cpp  settingswindow.h  settingswindow.ui
interface/modes2D/: flaps.cpp  move.cpp  renwin2DModes.h  rotate.cpp  select.cpp  snap.cpp
io/: saferead.cpp  saferead.h
ivo/: ivoloader.cpp
licenses/: README
mesh/: command.cpp  command.h  mesh.cpp  mesh.h  meshPacking.cpp  triangle2d.cpp  trianglegroup.cpp
modelLoader/: objParser.base.h  objParser.cpp  objParser.h  objParser.impl.h  objScanner.base.h  objScanner.cpp  objScanner.h  objScanner.impl.h  structure.h
notification/: hub.cpp  hub.h  notification.h  subscriber.cpp  subscriber.h
pdo/: pdoloader.cpp  pdotools.cpp  pdotools.h
renderers/: abstractrenderer.cpp  abstractrenderer.h  renderbase2d.cpp  renderbase2d.h  renderbase3d.cpp  renderbase3d.h  rendererclassic.cpp  rendererclassic.h  renderlegacy2d.cpp  renderlegacy2d.h  renderlegacy3d.cpp  renderlegacy3d.h  renwin.cpp  renwin.h  renwin2d.cpp  renwin2d.h  renwin3d.cpp  renwin3d.h
settings/: settings.cpp  settings.h
src/: CMakeLists.txt  main.cpp  res.qrc
src/Ivo/: CMakeLists.txt  formats3d.cpp
src/Ivo/geometric/: aabbox.cpp  aabbox.h  binPacking.cpp  compgeom.cpp  compgeom.h
src/Ivo/interface/: actionupdater.h  editinfo2d.h  exportwindow.h  exportwindow.ui  importwindow.cpp  importwindow.ui  mainwindow.h  mainwindowUpdaters.cpp  materialmanager.cpp  renwin.cpp  renwin.h  renwin2d.cpp  renwin2d.h  scalewindow.h  settingswindow.cpp  settingswindow.ui
src/Ivo/interface/modes2D/: flaps.cpp  flaps.h  mode2D.cpp  move.h  navigation.cpp  navigation.h  rotate.cpp  select.h  snap.cpp
src/Ivo/io/: saferead.cpp  saferead.h  utils.h
src/Ivo/mesh/: command.h  mesh.cpp  mesh.h  trianglegroup.cpp
src/Ivo/notification/: hub.cpp  hub.h  subscriber.cpp
src/Ivo/pdo/: pdoloader.cpp
src/Ivo/renderers/: abstractrenderer.cpp  renderbase2d.h  renderbase3d.cpp  renderbase3d.h  renderlegacy2d.cpp  renderlegacy3d.cpp  renderlegacy3d.h
src/Ivo/settings/: settings.cpp  settings.h
src/cmake-modules/: Findassimp.cmake  Findglm.cmake
src/geometric/: binPacking.h  compgeom.cpp  compgeom.h  minOBBox.cpp  obbox.cpp  obbox.h
src/interface/: exportwindow.cpp  importwindow.h  mainwindow.cpp  mainwindow.ui  mainwindowGUI.cpp  materialmanager.h  materialmanager.ui  renwin2d.cpp  renwin2d.h  renwin2dEditInfo.h  renwin3d.cpp  renwin3d.h  scalewindow.cpp  scalewindow.ui  selectioninfo.h  settingswindow.h  toolbar.json
src/interface/modes2D/: flaps.cpp  flaps.h  mode2D.cpp  mode2D.h  move.cpp  move.h  navigation.cpp  renwin2DModes.h  rotate.cpp  rotate.h  select.cpp  select.h  snap.cpp  snap.h
src/io/: saferead.cpp  saferead.h
src/ivo/: ivoloader.cpp
src/mesh/: command.cpp  meshPacking.cpp  triangle2d.cpp
src/notification/: hub.h  notification.h  subscriber.h
src/pdo/: pdoloader.cpp  pdotools.cpp  pdotools.h
src/renderers/: abstractrenderer.h  renderbase2d.cpp  renderbase2d.h  renderlegacy2d.cpp  renderlegacy2d.h
styles/: Smooth.qss
